<resources>
    <string name="app_name">CovidAware</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="changeEM">Change Email</string>
    <string name="changePass">Change Password</string>
    <string name="logOut">Log Out</string>
    <string name="clearHistory">Clear History</string>
    <string name="settings">Settings</string>
    <string name="icon">icon</string>
    <string name="email">email@email.com</string>
    <string name="privacy">Privacy</string>
    <string name="viewHistory">View History</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>